Fix overflow if many categories on project #69

--- a/app/assets/stylesheets/_progress-bars.scss
+++ b/app/assets/stylesheets/_progress-bars.scss
@@ -1,8 +1,7 @@
 
 .activities {
   li {
-    display: table-cell;
-    width: 1%;
+    display: inline-block;
     border-bottom: none;
     text-align: center;
     padding: 11px 5px;
